stoat/tests/snapshots/snapshots/snapshots__git_status__staged.snap
---
source: stoat/tests/snapshots/git_status.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=git_status ctx=Git
filter=Staged files=1/2
>S M file.txt
